--- a/angular/drink-party-frontend/angular.json
+++ b/angular/drink-party-frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "drink-party": {
+    "drink-party-frontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/drink-party",
+            "outputPath": "dist/drink-party-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "drink-party:build"
+            "browserTarget": "drink-party-frontend:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "drink-party:build:production"
+              "browserTarget": "drink-party-frontend:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "drink-party:build"
+            "browserTarget": "drink-party-frontend:build"
           }
         },
         "test": {
@@ -105,16 +105,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "drink-party:serve"
+            "devServerTarget": "drink-party-frontend:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "drink-party:serve:production"
+              "devServerTarget": "drink-party-frontend:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "drink-party"
+  "defaultProject": "drink-party-frontend"
 }
