feat: generate token

--- a/aspnet-core/src/DrinkParty/appsettings.json
+++ b/aspnet-core/src/DrinkParty/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DrinkContext": "Server=(localdb)\\mssqllocaldb;Database=DrinkDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtSettings": {
+    "Issuer": "2558923b-ed6b-49c0-bbf7-186e2f927518",
+    "Audience": "dfda2585-0fcc-4c00-a42e-466d2d05a89c",
+    "Key": "2558923b-ed6b-49c0-bbf7-186e2f927516",
+    "Expiration": 43200
   }
 }
