feat: add sqlite db

--- a/aspnet-core/src/DrinkParty/appsettings.json
+++ b/aspnet-core/src/DrinkParty/appsettings.json
@@ -1,14 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DrinkContext": "Server=(localdb)\\mssqllocaldb;Database=DrinkDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DrinkContext": "Data Source=drink-party.db"
   },
   "JwtSettings": {
     "Issuer": "2558923b-ed6b-49c0-bbf7-186e2f927518",
