--- a/aspnet-core/src/DrinkParty/DrinkParty.csproj
+++ b/aspnet-core/src/DrinkParty/DrinkParty.csproj
@@ -14,5 +14,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Hubs\Contracts\" />
+  </ItemGroup>
+
 
 </Project>
